trigger on configurable trigger

--- a/configuration.py.IN
+++ b/configuration.py.IN
@@ -3,4 +3,4 @@ mqtt_port    = 1883
 topic_prefix = 'GHBot/'  # leave this as is
 channels     = ['nurdbottest', 'nurds', 'nurdsbofh']  # channels to respond to
 prefix       = '!'  # !command, will be updated by ghbot
-prompt       = 'wagebotje:'
+trigger      = 'wagebotje:'
